added feature corner map fixed issue with different resolution

--- a/assets/config.ini
+++ b/assets/config.ini
@@ -8,10 +8,16 @@ quickSave = 1
 ;offset_x_ptr = 0x6A7FF4
 ;offset_y_ptr = 0x6A7FFC
 ;offset_lvl_ptr = 0x6137C8
-;Exanima 0.8.5.3c Beta
-offset_x_ptr = 0x6ABA3C
-offset_y_ptr = 0x6ABA44
-offset_lvl_ptr = 0x616978
+;Exanima 0.8.5.4 Beta
+;offset_x_ptr = 0x6A53A4
+;offset_y_ptr = 0x6A53AC
+;offset_lvl_ptr = 0x60F490
+;Exanima 0.9 
+offset_x_ptr = 0x71BE48
+offset_y_ptr = 0x71BE50
+offset_lvl_ptr = 0x636180
+rotationy_ptr = 0x71BE18
+rotationx_ptr = 0x71BE20
 
 [Maps]
 mapid_2_location = assets/[ID2]Map_LVL1.png
@@ -24,6 +30,7 @@ mapid_8_location = assets/[ID8]Map_Golems.png
 mapid_9_location = assets/[ID9]Map_CrossroadsSewers.png
 mapid_10_location = assets/[ID10]Map_Market.png
 mapid_11_location = assets/[ID11]Map_MarketSewer.png
+mapid_12_location = assets/title.png
 
 [Offsets]
 mapid_2_offsetx = 9620
@@ -38,7 +45,7 @@ mapid_4_scalexy = 0.1572
 mapid_5_offsetx = 9929
 mapid_5_offsety = 9897
 mapid_5_scalexy = 0.1572
-mapid_6_offsetx = 9240
+mapid_6_offsetx = 9200
 mapid_6_offsety = 7990
 mapid_6_scalexy = 0.1572
 mapid_7_offsetx = 19636
@@ -56,4 +63,7 @@ mapid_10_scalexy = 0.1572
 mapid_11_offsetx = 14847
 mapid_11_offsety = 13984
 mapid_11_scalexy = 0.1572
+mapid_12_offsetx = 0
+mapid_12_offsety = 0
+mapid_12_scalexy = 0
 
