--- a/assets/config.ini
+++ b/assets/config.ini
@@ -4,20 +4,19 @@ full_window_screen = 1
 quickSave = 1
 
 [MemoryAddresses]
-;Exanima 0.8.4
-;offset_x_ptr = 0x6A7FF4
-;offset_y_ptr = 0x6A7FFC
-;offset_lvl_ptr = 0x6137C8
-;Exanima 0.8.5.4 Beta
-;offset_x_ptr = 0x6A53A4
-;offset_y_ptr = 0x6A53AC
-;offset_lvl_ptr = 0x60F490
-;Exanima 0.9 
-offset_x_ptr = 0x71BE48
-offset_y_ptr = 0x71BE50
-offset_lvl_ptr = 0x636180
-rotationy_ptr = 0x71BE18
-rotationx_ptr = 0x71BE20
+;Exanima 0.9.0.1 
+;offset_x_ptr = 0x71BE48
+;offset_y_ptr = 0x71BE50
+;offset_lvl_ptr = 0x636180
+;rotationy_ptr = 0x71BE18
+;rotationx_ptr = 0x71BE20
+
+;Exanima 0.9.0.2 
+offset_x_ptr = 0x71CE58
+offset_y_ptr = 0x71CE60
+offset_lvl_ptr = 0x637180
+rotationx_ptr = 0x71CE30
+rotationy_ptr = 0x71CE28
 
 [Maps]
 mapid_2_location = assets/[ID2]Map_LVL1.png
@@ -30,7 +29,7 @@ mapid_8_location = assets/[ID8]Map_Golems.png
 mapid_9_location = assets/[ID9]Map_CrossroadsSewers.png
 mapid_10_location = assets/[ID10]Map_Market.png
 mapid_11_location = assets/[ID11]Map_MarketSewer.png
-mapid_12_location = assets/title.png
+mapid_12_location = assets/[ID12]Map_Ruins.png
 
 [Offsets]
 mapid_2_offsetx = 9620
@@ -63,7 +62,7 @@ mapid_10_scalexy = 0.1572
 mapid_11_offsetx = 14847
 mapid_11_offsety = 13984
 mapid_11_scalexy = 0.1572
-mapid_12_offsetx = 0
-mapid_12_offsety = 0
-mapid_12_scalexy = 0
+mapid_12_offsetx = 17780
+mapid_12_offsety = 15020
+mapid_12_scalexy = 0.1572
 
