added confirm message on loading backups

--- a/assets/config.ini
+++ b/assets/config.ini
@@ -4,19 +4,21 @@ full_window_screen = 1
 quickSave = 1
 
 [MemoryAddresses]
-;Exanima 0.9.0.1 
-;offset_x_ptr = 0x71BE48
-;offset_y_ptr = 0x71BE50
-;offset_lvl_ptr = 0x636180
-;rotationy_ptr = 0x71BE18
-;rotationx_ptr = 0x71BE20
 
-;Exanima 0.9.0.2 
-offset_x_ptr = 0x71CE58
-offset_y_ptr = 0x71CE60
-offset_lvl_ptr = 0x637180
-rotationx_ptr = 0x71CE30
-rotationy_ptr = 0x71CE28
+
+;Exanima 0.9.0.4 
+;offset_y_ptr = 0x71DE68
+;offset_x_ptr = 0x71DE60
+;offset_lvl_ptr = 0x63818C
+;rotationy_ptr = 0x71DE30
+;rotationx_ptr = 0x71DE38
+
+;Exanima 0.9.0.5 
+offset_y_ptr = 0x71DE90
+offset_x_ptr = 0x71DE88
+offset_lvl_ptr = 0x63818C
+rotationy_ptr = 0x71DE58
+rotationx_ptr = 0x71DE60
 
 [Maps]
 mapid_2_location = assets/[ID2]Map_LVL1.png
@@ -62,7 +64,7 @@ mapid_10_scalexy = 0.1572
 mapid_11_offsetx = 14847
 mapid_11_offsety = 13984
 mapid_11_scalexy = 0.1572
-mapid_12_offsetx = 17780
-mapid_12_offsety = 15020
+mapid_12_offsetx = 17750
+mapid_12_offsety = 14930
 mapid_12_scalexy = 0.1572
 
